# WebSwarm

./: .build.yml  .gitignore  LICENSE  Makefile  README.md  deploy.sh  package-lock.json  package.json  run_with_env.sh  runserver.sh  setup.cfg  setup.py
.builds/: archlinux.yml  ubuntu.yml
rootfs/etc/nginx/: nginx.conf
rootfs/etc/nginx/sites-available/: rmrf
rootfs/etc/nginx/sites-enabled/: rmrf
rootfs/etc/ssl/: cacert.pem.gpg  privkey.pem.gpg
rootfs/etc/ssl/certs/: dhparam.pem.gpg
rootfs/etc/systemd/system/: gunicorn.service  gunicorn.socket
secrets/: secrets.sh  secrets.sh.gpg
src/WebShell/: __init__.py  __main__.py  app.py  framerate.py  hello_world.py  log.py  twodim.py
src/WebShell/static/css/: _icon-embedded.scss
src/WebShell/static/js/: rmrf.js
src/WebShell/templates/: base.html  index.html
src/WebShell/templates/component/: login.html  navbar.html
src/WebShell/templates/js/: 2d.js  bulma.js  chat.js  cookie.js  fullscreen.js  game.js  login.js  main.js  navbar.js  socket.js  utils.js
src/WebShell/templates/sass/: rmrf.scss
src/WebSwarm/: __init__.py  __main__.py  app.py  chat.py  framerate.py  game.py  log.py  twodim.py
src/WebSwarm/templates/: index.html
src/WebSwarm/templates/js/: 2d.js  chat.js  game.js  login.js  main.js  navbar.js  socket.js
src/WebSwarm/templates/sass/: rmrf.scss
tests/: test_grid.py  test_todo.py
